# graf_v4

./: .gitignore  OPTIMIZATION.md  README.md  ROADMAP PARA CREAR UN HOOK DE ANÁLISIS DE VOLTAMETRÍA CÍCLICA (TS).md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  graf-state.graft  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.test.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: realse.yml
docs/cv-analysis/: ADVANCED_EXAMPLES.md  ARCHITECTURE.md  IMPLEMENTATION_PROGRESS.md  MECHANISM_DETECTION.md  README.md  ROADMAP_GRAF_CV_ANALYSIS.md  SUMMARY.md
math-lib/: Cargo.toml
math-lib/src/: lib.rs
math-lib/src/fits/: mod.rs  polynomial_fit.rs
math-lib/src/functions/: calculate_polygon_area.rs  mod.rs  numerical_derivative.rs  process_curve.rs  savitzky_golay_derivative.rs  savitzky_golay_smooth.rs  set_panic_hook.rs
scan/: 3_ S1_2-VC.teq4  3_S10_2-VC.teq4  3_S11_2-VC.teq4  3_S2_2-VC_.teq4  3_S3_2-VC.teq4  3_S4_2-VC.teq4  3_S5_2-VC.teq4  3_S6_2-VC.teq4  3_S7_2-VC.teq4  3_S8_2-VC.teq4  3_S9_2-VC.teq4  sequence.seq
src/main/: index.ts
src/main/lib/: fileWalker.ts  files.ts  project.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: index.css
src/renderer/src/components/: graf.tsx
src/renderer/src/context/: GraftContext.tsx  GraftProvider.tsx  Loading.tsx
src/renderer/src/hooks/: useData.tsx  useFit.ts  useGaussianIteration.ts  useImportData.ts  useLoader.tsx  useMathOperation.ts  (+3 more)
src/shared/models/: files.ts
(+175 files in other folders)
