[package]
name = "math-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
nalgebra = "0.32.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

# The `getrandom` crate is required for `nalgebra` to work correctly in a Wasm environment.
[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[features]
# The default feature enables the panic hook for better error messages in the browser console.
default = ["console_error_panic_hook"]
