[package]
name = "math-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0"
rust_decimal = { version = "1.35.0", features = ["serde", "maths"] }
rust_decimal_macros = "1.35.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
  'console',
]

# The `getrandom` crate is required for `nalgebra` to work correctly in a Wasm environment.
[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[features]
# The default feature enables the panic hook for better error messages in the browser console.
default = ["console_error_panic_hook"]

[package.metadata.wasm-bindgen]
wasm-opt = false
